--- a/.github/workflows/pythonpackage.yml
+++ b/.github/workflows/pythonpackage.yml
@@ -20,7 +20,7 @@ jobs:
           python -m pip install --upgrade pip nox
       - name: Build the docs
         run: |
-          touch .nojekyll
+          touch _build/html/.nojekyll
           nox -s "docs(html)"
       - name: Deploy 🚀
         uses: JamesIves/github-pages-deploy-action@4.1.6
